--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+html{scroll-behavior:smooth}
+
 body{
     font-family: 'Roboto Condensed', sans-serif;
     color: rgba(32, 32, 32, 0.842);
@@ -6,14 +8,18 @@ body{
     background-attachment: fixed;
 }
 
+strong{
+    font-weight: bold;
+}
+
 .header__contact-container{
     display: none;
 }
 
 p{
     color: rgb(71, 71, 71);
-    line-height: 1.5rem;
-    
+    line-height: 2rem;
+    text-shadow: 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.082);
 }
 
 .print{
@@ -73,11 +79,12 @@ p{
 }
 
 .navBar-button{
+    font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
     background-color: #c9c9c9;
     color: rgb(252, 252, 252);
     padding: 0.5rem;
-    width: -webkit-fill-available;
+    width: 100%;
     text-align: center;
     border: solid 1px #18181807;
 }
@@ -144,6 +151,7 @@ p{
 }
 
 .header-container{
+    padding: 5px 3px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -164,7 +172,7 @@ p{
 }
 
 .carrer-container{
-    padding: 20px 0;
+    padding: 20px 3px;
     margin: 20px 0;
     display: flex;
     flex-wrap: wrap;
@@ -214,17 +222,21 @@ p{
 }
 
 .skills__container{
+    margin: 15px 5px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: left;
     border: solid 3px rgba(228, 242, 255, 0.836);
     border-radius: 15px;
-    padding: 5px;
+    padding: 5px 10px;
     background-color: rgb(249, 249, 255);
     box-shadow: 5px 4px 11px -3px rgba(0,0,0,0.47);
+    width: 100vw;
+    
 }
 
 .skills__img-container{
+    width: 110px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -235,9 +247,10 @@ p{
 }
 
 li {
+    text-shadow: 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.062);
     list-style-position: inside;
     list-style-type: circle;
-    line-height: 1.3rem;
+    line-height: 2rem;
     color: rgb(73, 73, 73);
 }
 
@@ -247,5 +260,31 @@ text-align: center;
 
 
 .dev-container{
-    border-top: rgba(240, 248, 255, 0.527) dotted 3px;
+    padding: 5px;
+}
+
+.footer{
+    min-height: 3rem;
+    padding: 10px;
+    background-color: #888888;
+
+}
+
+.footer__print-button{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: bold;
+    background-color: #c9c9c909;
+    color: rgb(252, 252, 252);
+    text-align: center;
+    padding: 0.5rem;
+    border: solid 1px #18181807;
+    transition-duration: 0.3s;
+}
+
+.footer__print-button:hover{
+    transition-duration: 0.3s;
+    background-color: rgba(236, 236, 236, 0.938);
+    color: #181818;
+    animation: pulse;
+    animation-duration: 0.7s;
 }
