--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ strong{
 }
 
 p{
-    color: rgb(71, 71, 71);
+    color: rgb(79, 79, 79);
     line-height: 2rem;
     text-shadow: 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.082);
 }
@@ -37,10 +37,13 @@ p{
 
 .one-formation__name{
     font-size: 1.1rem;
+    border-left: #1818181f solid 1px;
+    padding-left: 5px;
 }
 
 .one-formation__description{
     font-size: 1.1rem;
+    font-style: oblique;
     color: rgba(32, 32, 32, 0.842);
     
 }
@@ -239,6 +242,7 @@ p{
     width: 110px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     text-transform: uppercase;
     border-right: cornsilk solid 2px;
@@ -266,14 +270,16 @@ text-align: center;
 .footer{
     min-height: 3rem;
     padding: 10px;
-    background-color: #888888;
-
+    background-color: #b7b7b7;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;;
+    align-items: center;
 }
 
-.footer__print-button{
+.footer__print-button, .footer_mail-button{
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
-    background-color: #c9c9c909;
     color: rgb(252, 252, 252);
     text-align: center;
     padding: 0.5rem;
@@ -281,7 +287,7 @@ text-align: center;
     transition-duration: 0.3s;
 }
 
-.footer__print-button:hover{
+.footer__print-button:hover, .footer_mail-button:hover{
     transition-duration: 0.3s;
     background-color: rgba(236, 236, 236, 0.938);
     color: #181818;
