--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@ html{scroll-behavior:smooth}
 
 body{
     font-family: 'Roboto Condensed', sans-serif;
-    color: rgba(32, 32, 32, 0.842);
-    background-color: rgb(255, 255, 255);
+    /* color: rgba(32, 32, 32, 0.842); */
+    color: #2E4A62;
     background-image: url("https://i.pinimg.com/originals/51/95/eb/5195ebb8c5f9772deda82aa2937134d3.jpg");
     background-attachment: fixed;
 }
@@ -11,6 +11,20 @@ body{
 strong{
     font-weight: bold;
 }
+
+
+.footer-social-network__container{
+    display: none
+}
+
+.social-network__container{
+    background-color: #b7b7b7;
+    border-radius: 0 5% 5% 0;
+    position: fixed;
+    left: 0;
+    top: 50%;
+}
+
 
 .header__contact-container{
     display: none;
@@ -63,10 +77,10 @@ p{
 .container {
     
     position: relative;
-    max-width: 1000px;
+    max-width: 1150px;
     margin: auto;
     box-shadow: 0px 0px 6px 4px rgba(25, 25, 25, 0);
-    background-color: #f3f3f3ea;
+    background-color: #fffffff1;
 
 }
 
@@ -82,9 +96,10 @@ p{
 }
 
 .navBar-button{
+    font-size: 1.1rem;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: bold;
-    background-color: #c9c9c9;
+    background-color: #484848;
     color: rgb(252, 252, 252);
     padding: 0.5rem;
     width: 100%;
@@ -141,7 +156,7 @@ p{
     align-items: center;
 }
 
-.header-skill:hover{
+.header-skill:hover, .social-network__img-container:hover{
     animation: pulse;
     color: rgba(23, 20, 43, 0.788);
     animation-duration: 0.5s;
@@ -228,7 +243,8 @@ p{
     margin: 15px 5px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: space-between;
+    flex-direction: row-reverse;
     border: solid 3px rgba(228, 242, 255, 0.836);
     border-radius: 15px;
     padding: 5px 10px;
@@ -246,7 +262,6 @@ p{
     align-items: center;
     text-transform: uppercase;
     border-right: cornsilk solid 2px;
-    padding: 5px;
     font-weight: bold;
 }
 
@@ -268,13 +283,30 @@ text-align: center;
 }
 
 .footer{
+    height: 10rem;
     min-height: 3rem;
     padding: 10px;
-    background-color: #b7b7b7;
-    display: flex;
+    background-color: #484848;
+    /* display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;;
-    align-items: center;
+    align-items: center; */
+}
+
+.footer__contact-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.footer__legal-mentions{
+    font-size: 0.9rem;
+    color: slategray;
+    margin: auto;
+    bottom:10px;
+    right: 10px;
+
+    position: absolute;
 }
 
 .footer__print-button, .footer_mail-button{
@@ -293,4 +325,32 @@ text-align: center;
     color: #181818;
     animation: pulse;
     animation-duration: 0.7s;
+}
+@media (max-width: 840px){
+    .skills__container{
+        display: block;
+    }
+    .skills__img-container{
+        margin: auto;
+    }
+    .footer-social-network__container{
+        margin-top: 1.5rem;
+        display: flex;
+        justify-content: space-around;
+    }
+}
+
+@media (max-width: 1200px){
+    .social-network__container{
+        display: none;
+    }
+    .footer-social-network__container{
+        margin-top: 1.3rem;
+        display: flex;
+        justify-content: space-evenly;
+    }
+}
+
+.skills__container--print{
+    display: none;
 }
